# nsdf-software-stack

./: .gitignore  ReadMe.md  setup.cfg  setup.py
ansible/: clean-up.yaml  inventory.ini  mount-disk.yaml  setup-conda.yaml  setup-cpython.yaml  sync-code.yaml
jupyter/: arecibo.ipynb  nsdf-catalog.ipynb  nsdf-material-science-workflow-Open_4D_micro_CT_and_extract_numpy_volume.ipynb  nsdf-material-science-workflow-Open_4D_micro_CT_and_extract_slice.ipynb  nsdf-material-science-workflow-Open_4D_micro_CT_and_extract_slices.ipynb  nsdf-material-science-workflow-open_4D_micro_CT.ipynb  nsdf-material-science-workflow-open_4D_micro_CT_interactive.ipynb  nsdf-material-science-workflow-process_and_segment_images_with_CNN.ipynb  nsdf-material-science-workflow.ipynb
nsdf/: __main__.py
nsdf/catalog/: ReadMe.md  __main__.py  arecibo.py  aws_open_data.py  catalog.ipynb  cyverse.py  dataverse.py  digital_rocks.py  dryad.py  material_commons.py  material_data_facility.py  neon.py  workflow.yaml  zenodo.py
nsdf/cloud/: ReadMe.aws.md  ReadMe.chameleon.md  ReadMe.cloudlab.md  ReadMe.ibm.md  ReadMe.jetstream.md  ReadMe.md  ReadMe.vultr.md  __main__.py  aws.py  base_ec2.py  chameleon.py  cloudlab.py  jetstream.py  utils.py  vultr.py
nsdf/convert/: __init__.py  __main__.py  openvisus.py
nsdf/distributed/: __init__.py  dask.py
nsdf/exxon/: ReadMe.md  demo.ipynb  run.sh  s3.py  time-difference-exxon-zoom.ipynb  transform.py
nsdf/fuse/: ReadMe.md
nsdf/ipfs/: ReadMe.md  diagram.png:Zone.Identifier  list_objects.py  openvisus.datasets.errors.yaml  openvisus.find-datasets.py  (+2 more)
(+61 files in other folders)
