[metadata]
name = nsdf
version = 0.0.1
author = NSDF
author_email = info@nationalsciencedatafabric.org
description = NSDF Python Libraries
long_description = file: ReadMe.md
long_description_content_type = text/markdown
url = https://github.com/nsdf-fabric/nsdf-data-catalog
project_urls =
    Bug Tracker = https://github.com/nsdf-fabric/nsdf-data-catalog
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    =nsdf
packages = find:
python_requires = >=3.6

[options.packages.find]
where = nsdf
